src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_with_children.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo.project.json
  relevant_paths:
    - /foo.project.json
  context: {}
  debug_id: ~
name: children
class_name: Folder
properties: {}
children:
  - snapshot_id: ~
    metadata:
      ignore_unknown_instances: true
      instigating_source:
        ProjectNode:
          - /foo.project.json
          - Child
          - $className: Model
          - Folder
      relevant_paths: []
      context: {}
      debug_id: ~
    name: Child
    class_name: Model
    properties: {}
    children: []
    ignore_children: false
ignore_children: false


